# cargo-manage

./: .gitignore  Cargo.toml  README.md  mise.toml
.github/workflows/: check-and-lint.yaml  release.yaml  test.yaml
src/: lib.rs  main.rs
